src/test/deca/context/valid/sansObjet/Division.deca
{
    float b;
    b = 2.0/1.0;
    print(b);
}