src/test/deca/context/invalid/sansObjet/BadVoidUsage.deca
{
    void a = 2.0;
}